--- a/app/src/main/res/layout/activity_south.xml
+++ b/app/src/main/res/layout/activity_south.xml
@@ -7,6 +7,7 @@
     tools:context=".NorthActivity">
 
     <TextView
+        android:id="@+id/south"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/south"
